Layout design complete

--- a/Ans-11-web-page/index.html
+++ b/Ans-11-web-page/index.html
@@ -1,90 +1,72 @@
-<!DOCTYPE>
-<html>
-	<head>
-		<title> Web page for Assignment </title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Web APP</title>
+  </head>
+  <body>
+    <header class="dark-bg default-pad">
+      <h1 class="layout">
+        <a href="index1.html" class="no-decor light-font">To The New</a>
+      </h1>
 
-		<meta charset="UTF-18">
-		<meta name="description" conetent="Web page assignment for TTN bootcamp">
-		<meta name="keywords" content="HTML,CSS">
-		<meta name="author" content="Syed Shayan Nasir">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			
-		<link rel="stylesheet" type="text/css" href="./style.css">
+      <nav class="layout">
+        <ul class="h-list-wrapper light-font">
+          <li><a>TEXT LINK</a></li>
+          <li><a>TEXT LINK</a></li>
+          <li><a>TEXT LINK</a></li>
+          <li><a>TEXT LINK</a></li>
+        </ul>
+      </nav>
+    </header>
 
-	</head>
-
-	<body>
-		<header>
-			<h1> To The New </h1>
-			<nav>
-				<ul>
-					<li><a>TEXT LINK</a></li>
-					<li><a>TEXT LINK</a></li>
-					<li><a>TEXT LINK</a></li>
-					<li><a>TEXT LINK</a></li>
-				</ul>
-			</nav>
-		</header>
-
-		<section id="main">
-
-			<div id="welcomeBanner">
-				<p>960 x 360px</p>
-			</div>
-
-			<div id="articleWrapper">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur 					adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor 					incididunt ut labore et dolore magna aliqua. Quis eleifend quam 						adipiscing vitae proin.</p>
-			</div>
-
-			<div id="gallery">
-			<h5>LATEST FROM GALLERY</h5>
-			<hr>
-
-			<ul id="card-wrapper">
-				<li>
-					<div class="card">
-						<div>
-							<p>215 x 315px</p>
-						</div>
-						<p>IMAGE CAPTION HERE</p>
-					</div>
-				</li>
-				<li>
-					<div class="card">
-						<div></div>
-						<p>IMAGE CAPTION HERE</p>
-					</div>
-				</li>
-<li>
-					<div class="card">
-						<div></div>
-						<p>IMAGE CAPTION HERE</p>
-					</div>
-				</li>
-<li>
-					<div class="card">
-						<div></div>
-						<p>IMAGE CAPTION HERE</p>
-					</div>
-				</li>
-			</ul>
-		</div>
-
-		<section>
-
-
-
-
-<!--
-		<footer>
-			<span>Copyright &copy; 2009 - 2017 - All Rights Reserved - To The New </span>
-			<span>Web layout by To the New<span>
-		</footer>
-
--->
-						
-			
-
-	</body>
-
+    <div class="main default-pad">
+      <div class="banner layout dark-bg light-font mb-2">
+        <p class="center-xy">960 x 360px</p>
+      </div>
+      <div class="article-wrapper layout light-bg dark-font mb-2">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur
+          adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam
+          adipiscing vitae proin.
+        </p>
+      </div>
+      <h4 class="layout dark-font">LATEST FROM GALLERY</h4>
+      <hr />
+      <ul class="layout h-list-wrapper row">
+        <li class="card">
+            <div class="holder dark-bg light-font">
+                <p class="center-xy">215 x 315px</p>
+            </div>
+            <p class="light-bg dark-font">IMAGE CAPTION HERE</p>
+        </li>
+        <li class="card">
+            <div class="holder dark-bg light-font">
+                <p class="center-xy">215 x 315px</p>
+            </div>
+            <p class="light-bg dark-font">IMAGE CAPTION HERE</p>
+        </li>
+        <li class="card">
+            <div class="holder dark-bg light-font">
+                <p class="center-xy">215 x 315px</p>
+            </div>
+            <p class="light-bg dark-font">IMAGE CAPTION HERE</p>
+        </li>
+        <li class="card">
+            <div class="holder dark-bg light-font">
+                <p class="center-xy">215 x 315px</p>
+            </div>
+            <p class="light-bg dark-font">IMAGE CAPTION HERE</p>
+        </li>
+      </div>
+      <footer class="default-pad dark-bg">
+          <div class="layout">
+            <span class="left light-font">Copyright &copy; 2009 - 2017 - All Rights Reserved - To The New </span>
+            <span class="right light-font">Web layout by To the New<span>
+          </div>
+    </footer>
+  </body>
 </html>
