--- a/web-page/index.html
+++ b/web-page/index.html
@@ -118,7 +118,7 @@
 
       <!-- footer -->
       <div class="footer bg-grey-1 px-4 py-4">
-        <div class="container pb-4 pb-xs-4 text-grey">
+        <div class="container pb-4 pb-xs-4 text-grey foot">
           <span class="float-l "
             >Copyright &copy; 2009 - 2017 - All Rights Reserved - To The New
           </span>
